Fixed nav z-index

--- a/src/assets/less/styleguide/styleguide.less
+++ b/src/assets/less/styleguide/styleguide.less
@@ -518,6 +518,7 @@
             position: fixed;
             top: 0;
             width: 100%;
+            z-index: 1;
 
             .sg-logo {
                 float: left;
